--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -26,6 +26,8 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display: flex;
+      
     }
 
     .panel {
@@ -43,6 +45,10 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
     }
 
     .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
@@ -52,10 +58,28 @@
     .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
 
     /* Flex Children */
+    .panel > *:first-child {
+      transform: translateY(-100%);
+    }
+    .panel.open-active > *:first-child {
+      transform: translateY(0);
+    }
+
+    .panel > *:last-child {
+      transform: translateY(100%);
+    }
+    .panel.open-active > *:last-child {
+      transform: translateY(0);
+    }
+
     .panel > * {
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      flex-grow: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .panel p {
@@ -71,6 +95,7 @@
 
     .panel.open {
       font-size: 40px;
+      flex-grow: 5;
     }
 
   </style>
@@ -105,7 +130,20 @@
   </div>
 
   <script>
+    const panels = document.querySelectorAll('.panel')
 
+    function toggleOpen() {
+      this.classList.toggle('open')
+    }
+
+    function toggleActive(e) {
+      if (e.propertyName == 'flex-grow') {
+        this.classList.toggle('open-active')
+      }
+    }
+
+    panels.forEach(p => p.addEventListener('click', toggleOpen))
+    panels.forEach(p => p.addEventListener('transitionend', toggleActive))
   </script>
 
 
