--- a/24 - Sticky Nav/index-START.html
+++ b/24 - Sticky Nav/index-START.html
@@ -55,6 +55,19 @@
 
 <script>
 
+  const nav = document.querySelector('nav');
+  const topOfNav = nav.offsetTop;
+  function fixNav() {
+    if (window.scrollY >= topOfNav) {
+      document.body.classList.add('fixed-nav')
+      document.body.style.paddingTop = nav.offsetHeight + 'px';
+    } else {
+      document.body.classList.remove('fixed-nav')
+      document.body.style.paddingTop = 0 + 'px';
+    }
+  }
+
+  window.addEventListener('scroll', fixNav);
 </script>
 
 </body>
