--- a/26 - Stripe Follow Along Nav/index-START.html
+++ b/26 - Stripe Follow Along Nav/index-START.html
@@ -142,6 +142,14 @@
     display: none;
   }
 
+  .trigger-enter.dropdown {
+    display: block;
+  }
+
+  .trigger-enter-active.dropdown{
+    opacity: 1;
+  }
+
   .trigger-enter .dropdown {
     display: block;
   }
@@ -220,6 +228,39 @@
 </style>
 
 <script>
+  const triggers = document.querySelectorAll('.cool > li');
+  const background = document.querySelector('.dropdownBackground')
+  const nav = document.querySelector('.top')
+
+  function handleEnter() {
+    this.classList.add('trigger-enter')
+    setTimeout(() => this.classList.add('trigger-enter-active'), 150)   
+    background.classList.add('open');
+
+    const dropdown = this.querySelector('.dropdown');
+    const dropdownCoords = dropdown.getBoundingClientRect();
+    const navCoords = nav.getBoundingClientRect();
+    const coords = {
+      height: dropdownCoords.height,
+      width: dropdownCoords.width,
+      top:  dropdownCoords.top - navCoords.top + 10,
+      left:  dropdownCoords.left - navCoords.left
+    }
+
+    background.style.setProperty('width', `${coords.width}px`)
+    background.style.setProperty('height', `${coords.height}px`)
+    background.style.setProperty('left', `${coords.left}px`)
+    background.style.setProperty('top', `${coords.top}px`)
+  }
+
+  function handleLeave() {
+    this.classList.remove('trigger-enter')
+    setTimeout(() => this.classList.remove('trigger-enter-active'), 150)    
+    background.classList.remove('open'); 
+  }
+
+  triggers.forEach(t => t.addEventListener('mouseenter', handleEnter))
+  triggers.forEach(t => t.addEventListener('mouseleave', handleLeave))
 </script>
 
 </body>
